# SolarGrader

./: .env.example  .gitignore  CLAUDE.md  DATA_SOURCES.md  README.md  enrich_addresses.py  environment.yml  make_map.py  map.html  pipeline.py  pyproject.toml  regrade.py  requirements.txt  setup.py  solar-pipeline-plan.md  test_pipeline.py
.claude/hooks/: block-secret-commit.sh
.github/workflows/: ci.yml
examples/: validate_single_tile.py
memory/: MEMORY.md  pipeline_design.md  project_overview.md  tech_stack.md
solargrader/: __init__.py  cli.py  config.py  enrich.py  geometry.py  grading.py  models.py  pipeline.py  regrade.py  roof.py  solar.py  storage.py  util.py  webmap.py
solargrader/sources/: __init__.py  buildings.py  irradiance.py  regions.py  tiles.py
tests/: test_config.py  test_geometry_and_sources.py  test_grading.py  test_storage.py
